Admin team page finished.

--- a/KS.SportsPool.MVC/Views/Admin/Index.cshtml
+++ b/KS.SportsPool.MVC/Views/Admin/Index.cshtml
@@ -1,2 +1,9 @@
-﻿<h1>@ViewBag.Title</h1>
-<img src="~/Images/NHL_Shield.png" />
+﻿<div style="width: 100%; text-align: center;">
+    <h1>@ViewBag.Title</h1>
+    <div>
+        <img src="~/Images/NHL_Shield.png" />
+    </div>
+    <a href="/Admin/Pools" class="btn btn-primary">Pools</a>
+    <a href="/Admin/Athletes" class="btn btn-primary">Athletes</a>
+    <a href="/Admin/Teams" class="btn btn-primary">Teams</a>
+</div>
