--- a/KS.SportsPool.MVC/Views/Admin/Teams.cshtml
+++ b/KS.SportsPool.MVC/Views/Admin/Teams.cshtml
@@ -1,2 +1,34 @@
-﻿<h1>@ViewBag.Title</h1>
-<img src="~/Images/NHL_Shield.png" />
+﻿@using KS.SportsPool.Data.POCO;
+@model IEnumerable<Team>
+
+<div style="width: 100%; text-align: center;">
+    <h1>Teams</h1>
+    <div style="border: 1px solid #000000; padding: 5px;">
+        @using (Ajax.BeginForm("AddTeam", new AjaxOptions { InsertionMode = InsertionMode.Replace, HttpMethod = "Post", UpdateTargetId = "teamList", LoadingElementId = "loadingSymbol" }))
+        {
+            @Html.Label("Name")
+            @:&nbsp;
+            @Html.TextBox("Name")
+            @:&nbsp;
+            @Html.Label("Abbreviation")
+            @:&nbsp;
+            @Html.TextBox("Abbreviation")
+            @:&nbsp;
+            @Html.Label("Conference")
+            @:&nbsp;
+            @Html.TextBox("Conference")
+            @:&nbsp;
+            @Html.Label("Division")
+            @:&nbsp;
+            @Html.TextBox("Division")
+            @:&nbsp;
+            <button type="submit" class="btn btn-primary">Add Team</button>
+        }
+    </div>
+    
+    <div id="loadingSymbol" style="display: none;">LOADING PLEASE WAIT...</div>
+    
+    <div id="teamList">
+        @{Html.RenderPartial(@"TeamList", Model);}
+    </div>    
+</div>
