--- a/KS.SportsPool.MVC/Views/Home/Index.cshtml
+++ b/KS.SportsPool.MVC/Views/Home/Index.cshtml
@@ -1,2 +1,4 @@
-﻿<h1>@ViewBag.Title</h1>
-<img src="~/Images/NHL_Shield.png" />
+﻿<div style="width: 100%; text-align: center;">
+    <h1>@ViewBag.Title</h1>
+    <img src="~/Images/NHL_Shield.png" />
+</div>
