--- a/KS.SportsPool.MVC/Views/Shared/_Layout.cshtml
+++ b/KS.SportsPool.MVC/Views/Shared/_Layout.cshtml
@@ -15,9 +15,10 @@
             <p>&copy; @DateTime.Now.Year - Kevin Smeltzer</p>
         </footer>
     </div>
-
+    
     @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/bootstrap")    
     @RenderSection("scripts", required: false)
+    <script type="text/javascript" src="~/Scripts/jquery.unobtrusive-ajax.min.js" ></script>
 </body>
 </html>
