--- a/KS.SportsPool.MVC/Content/Site.css
+++ b/KS.SportsPool.MVC/Content/Site.css
@@ -22,3 +22,16 @@ select,
 textarea {
     max-width: 280px;
 }
+
+div.table 
+{
+    display:table;
+}
+form.tr, div.tr
+{
+    display:table-row;
+}
+span.td
+{
+    display:table-cell;
+}
