--- a/KS.SportsPool.MVC/Views/Admin/TeamGrid.cshtml
+++ b/KS.SportsPool.MVC/Views/Admin/TeamGrid.cshtml
@@ -14,7 +14,11 @@
         }, null, new { @class = "tr" }))
     {
         @Html.Hidden("Id", Model.Id)
-        <span class="td"><img style="max-height: 100px; max-width: 100px;" src="~/Images/Teams/@imgSrc" /><button type="submit" class="btn btn-primary">Save Team</button></span>
+        <span class="td">
+            <img style="max-height: 100px; max-width: 100px;" src="~/Images/Teams/@imgSrc" />
+            <button type="submit" class="btn btn-primary">Save Team</button>
+            <a href="/Admin/DeleteTeam/@{ WriteLiteral(Model.Id); }" class="btn btn-danger">Delete Team</a>
+        </span>
         <span class="td">@Html.TextBox("Name", Model.Name)</span>
         <span class="td">@Html.TextBox("Abbreviation", Model.Abbreviation)</span>
         <span class="td">@Html.TextBox("Round1", Model.Round1)</span>
