--- a/KS.SportsPool.MVC/Views/Admin/Teams.cshtml
+++ b/KS.SportsPool.MVC/Views/Admin/Teams.cshtml
@@ -1,6 +1,15 @@
 ﻿@using KS.SportsPool.Data.POCO;
 @model IEnumerable<Team>
 
+<div  style="position: fixed; text-align: center; background:#dddddd; bottom:0px; left:0px; width:100%; border: 1px solid black;">
+    <p id="errorMessage" style="color: #ff0000; font-size:large;">
+        @ViewBag.Error
+    </p>
+    <p id="successMessage" style="color: #00ff00; font-size:large;">
+        @ViewBag.Success
+    </p>
+</div>
+
 <div style="width: 100%; text-align: center;">
     <a href="/Admin/Pools" class="btn btn-primary">Pools</a>
     <a href="/Admin/Athletes" class="btn btn-primary">Athletes</a>
@@ -35,3 +44,14 @@
         @{Html.RenderPartial(@"TeamList", Model);}
     </div>    
 </div>
+
+@section scripts {
+    <script type="text/javascript">
+        $(document).ready(function () {
+            var anchor = document.getElementById('@ViewBag.ScrollSection');
+            if (anchor) {
+                anchor.scrollIntoView(true);
+            }
+        });
+    </script>
+}
