--- a/KS.SportsPool.MVC/Views/Admin/Teams.cshtml
+++ b/KS.SportsPool.MVC/Views/Admin/Teams.cshtml
@@ -1,13 +1,14 @@
 ﻿@using KS.SportsPool.Data.POCO;
 @model IEnumerable<Team>
 
-<div  style="position: fixed; text-align: center; background:#dddddd; bottom:0px; left:0px; width:100%; border: 1px solid black;">
+<div style="position: fixed; text-align: center; background:#dddddd; padding: 5px; bottom:0px; left:0px; width:100%; border: 1px solid black;">
     <p id="errorMessage" style="color: #ff0000; font-size:large;">
         @ViewBag.Error
     </p>
     <p id="successMessage" style="color: #00ff00; font-size:large;">
         @ViewBag.Success
     </p>
+    <a href="/Admin/UpdateScores" class="btn btn-primary">Update Pool Scores</a>
 </div>
 
 <div style="width: 100%; text-align: center;">
