--- a/KS.SportsPool.MVC/Views/Home/Index.cshtml
+++ b/KS.SportsPool.MVC/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
 ﻿<div style="width: 100%; text-align: center;">
     <h1>@ViewBag.Title</h1>
-    <img src="~/Images/NHL_Shield.png" />
+    <div>
+        <img src="~/Images/NHL_Shield.png" />
+    </div>
+    <a href="/Home/Pools" class="btn btn-primary">Pools</a>
 </div>
