--- a/KS.SportsPool.MVC/Views/Admin/PoolDetails.cshtml
+++ b/KS.SportsPool.MVC/Views/Admin/PoolDetails.cshtml
@@ -16,29 +16,49 @@
     <a href="/Admin/Pools" class="btn btn-primary">Pools</a>
     <a href="/Admin/Athletes" class="btn btn-primary">Athletes</a>
     <a href="/Admin/Teams" class="btn btn-primary">Teams</a>
-    <h1>@Model.Entry.Name</h1>
-    @*<div style="border: 1px solid #000000; padding: 5px;">
-        @using (Html.BeginForm("AddPool", "Admin", null, FormMethod.Post))
-        {
-            <p>
-                @Html.Label("Name")
-                &nbsp;
-                @Html.TextBox("Name")
-                &nbsp;
-                @Html.Label("Telephone")
-                &nbsp;
-                @Html.TextBox("Telephone")
-                &nbsp;
-                @Html.Label("Email")
-                &nbsp;
-                @Html.TextBox("Email")
-            </p>
-            <button type="submit" class="btn btn-primary">Add Pool</button>
-        }
-    </div>
+    <h4>@Model.Entry.Name</h4>
+    <h5>@Model.Entry.Telephone &nbsp; @Model.Entry.Email</h5>
 
-    <div id="teamList">
-        @{Html.RenderPartial(@"PoolList", Model);}
-    </div>
-       *@
+    var athleteGroups = Model.Athletes.OrderBy(ath => ath.GroupName).GroupBy(tea => tea.GroupName);
+
+    @{
+        for (int round = 1; round <= 4; round++)
+        {
+            <div style="color: #00ff00; background:#000000;">Round @round</div>
+            var teamConferenceGroups = Model.Teams.OrderBy(tea => tea.Conference).GroupBy(tea => tea.Conference);
+            foreach (var teamConference in teamConferenceGroups)
+            {
+                Team conferenceTeam = teamConference.FirstOrDefault();
+                @:<div style="float: left; width: 50%;">
+                    <div style="color: #00cc00; background:#000000;">@conferenceTeam.Conference</div>
+                var teamDivisionGroups = teamConference.GroupBy(tea => tea.Division);
+                foreach (var teamDivision in teamDivisionGroups)
+                {
+                    Team divisionTeam = teamDivision.FirstOrDefault();
+                    List<SelectListItem> teamListItems = new List<SelectListItem>();
+                    foreach (Team team in teamDivision)
+                    {
+                        bool isSelected = false;
+                        var pickedTeams = Model.TeamPicks.Where(tp => tp.Round == round && tp.Id == team.Id);
+                        if (pickedTeams.Count() > 0)
+                        {
+                            isSelected = true;
+                        }
+                        teamListItems.Add(new SelectListItem
+                        {
+                            Text = team.Name,
+                            Value = team.Id.ToString(),
+                            Selected = isSelected
+                        });
+                    }
+                    <div style="float:left;  width: 50%;">
+                        <div style="color: #009900; background:#000000;">@divisionTeam.Division</div>
+                        @Html.ListBox("TeamPicks", teamListItems)
+                    </div>
+                }
+                @:</div>
+        }
+            <div style="clear: both;"></div>
+        }
+    }
 </div>
