Admin UI finished for now

--- a/KS.SportsPool.MVC/Views/Admin/PoolDetails.cshtml
+++ b/KS.SportsPool.MVC/Views/Admin/PoolDetails.cshtml
@@ -112,9 +112,12 @@
                     @:</div>
                 }
                 <div style="clear: both;"></div>
-                }
             }
+            <div>
+                <button type="submit" class="btn btn-success">Save Picks</button>
+            </div>
         }
+    }
 </div>
 
 
